<resources>
    <string name="app_name">Bakatind</string>
    <string name="input_email">Masukan Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="btn_login">Login</string>
    <string name="txt_register">Belum punya akun?</string>
    <string name="sign_up_now">Daftar Sekarang</string>
    <string name="email_password_null">Masukan Email dan Password</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="send_reset_password">Silakan cek Inbox pada Email anda</string>
    <string name="request_data">...........</string>
    <string name="password_not_valid">Password yang dimasukan tidak sama</string>
    <string name="register_success">Registrasi berhasil</string>
    <string name="error_user_not_found">Email atau Password salah</string>
    <string name="error_wrong_password">Password yang anda masukan salah</string>
    <string name="email_not_valid">Email yang dimasukan tidak valid</string>
    <string name="btn_send">Kirim</string>
    <string name="btn_register">Daftar</string>
    <string name="re_type_password">Ketik Ulang Kata Sandi</string>
    <string name="user_phone">No. WhatsApp</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="user_address">Alamat Lengkap</string>
    <string name="warning_input_data">Tidak boleh ada data yang kosong</string>
    <string name="btn_request">Minta Persetujuan</string>
    <string name="logout">Logout</string>
    <string name="txt_information">Anda belum disetujui. Silakan klik tombol dibawah ini untuk meminta persetujuan Admin.</string>
    <string name="dashboard">Dashboard</string>
    <string name="lesson">Materi Skill</string>
    <string name="profile">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_success">Foto berhasil diubah</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="btn_edit">Edit</string>
    <string name="success_edit_profile">Profil berhasil diubah</string>
    <string name="user_school">Asal Sekolah</string>
    <string name="tv_no_data">Belum Ada Data</string>
    <string name="tv_request_data">......</string>
    <string name="subscribe_message">Untuk mengakses materi pembelajaran, silakan berlangganan terlebih dahulu</string>
    <string name="unable_to_access_note">Tidak terdapat media tulisan, silakan pilih media yang lain</string>
    <string name="tv_audio">Audio</string>
    <string name="tv_video">Video</string>
    <string name="tv_book">Tulisan</string>
    <string name="tv_type">Jenis Media:</string>
    <string name="no_media">-</string>
    <string name="no_data">-</string>
    <string name="tv_link">Link</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="fab_add_photo">fab_add_photo</string>
    <string name="policy_login">Anda melanggar ketentuan dan kebijakan aplikasi sehingga akun Anda Kami bekukan. Hubungi admin untuk Informasi lebih lanjut</string>
    <string name="unable_to_access_link">Tidak terdapat media link, silakan pilih media lainnya</string>
    <string name="is_login">Kami mendeteksi bahwa akun Anda sedang digunakan di banyak perangkat,agar Akun Anda tidak dibekukan segera ganti password atau Hubungi admin Klik Kerja. Hubungi admin Klik Kerja untuk Informasi lebih lanjut</string>
    <string name="tv_learning_progress">Progres Belajar</string>
    <string name="tv_class_participated">Kelas Yang Diikuti</string>
    <string name="player_error">Video Player Error</string>
    <string name="user_experience">Pengalaman Kerja</string>
    <string name="tv_class_create">KELAS YANG DIBUAT</string>
    <string name="menu_class">Kelas Saya</string>
    <string name="tv_no_class">Belum ada kelas yang dibuat</string>
    <string name="create_class">Buat kelas baru</string>
    <string name="lesson_layout">Pilih Skill Materi</string>
    <string name="class_layout">Pilih Kelas</string>
    <string name="new_class_layout">Nama Kelas</string>
    <string name="btn_create_class">Buat Kelas</string>
    <string name="tv_lesson_type">Pilih Jenis Materi Yang Akan Diupload</string>
    <string name="tv_pdf">PDF</string>
    <string name="tv_not_teacher_class">Belum ada kelas yang ditambahkan</string>
    <string name="class_list">Kelas</string>
    <string name="student_list">Pelajar</string>
    <string name="review">Ulasan</string>
    <string name="fab_review">Tulis Ulasan</string>
    <string name="tv_review">Berikan rating dan ulasan pada kelas</string>
    <string name="layout_review">Silakan tulis ulasan kamu disini</string>
    <string name="btn_submit">Kirimkan</string>
    <string name="new_lesson_layout">Nama Mata Pelajaran</string>
    <string name="lesson_name">Materi Skill</string>
    <string name="tv_class_name">Kelas : </string>
    <string name="tv_subclass">Sub Kelas</string>
    <string name="btn_create_subject">Unggah Materi</string>
    <string name="fab_subject">Unggah Materi</string>
    <string name="subject_list">Daftar Materi</string>
    <string name="tv_not_teacher_subject">Belum ada materi yang ditambahkan</string>
    <string name="tv_progress">Mengupload File</string>
    <string name="error">Terjadi kesalahan silakan coba lagi</string>
    <string name="btn_add_link">Tambahkan</string>
    <string name="btn_cancel">Batal</string>
    <string name="menu_lesson">Lihat Materi</string>
    <string name="menu_approve">Minta Persetujuan</string>
    <string name="tv_no_student">Belum ada pelajar yang terdaftar</string>
    <string name="tv_student_name">Student Name</string>
    <string name="email">Email</string>
    <string name="show_email">Email: %1$s</string>
    <string name="tv_status">Status : </string>
    <string name="tv_no_review">Belum ada ulasan</string>
    <string name="upload_class_success">Kelas berhasil ditambahkan</string>
    <string name="subclass_list">Sub Kelas</string>
    <string name="tv_not_teacher_subclass">Belum ada Sub Kelas yang ditambahkan</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Hapus</string>
    <string name="btn_save">Simpan</string>
    <string name="tv_total_students">Jumlah Pelajar:</string>
    <string name="layout_link">Masukan Link WA / Telegram</string>
    <string name="layout_score">Beri Nilai 10 sampai 100</string>
    <string name="layout_message">Pesan Untuk Siswa</string>
    <string name="btn_score">Beri Nilai</string>
    <string name="tv_score">Nilai: 0</string>
    <string name="btn_edit_score">Ubah Nilai</string>
    <string name="tv_subscribe_class">Belum ada kelas yang diikuti</string>
    <string name="tv_progress_study">Belum ada progress</string>
    <string name="subscribe">Berlangganan</string>
    <string name="tv_message">Keterangan:</string>
</resources>