<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_teacher"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_placeholder"
            app:civ_border_color="@color/colorGrayBorder"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_teacher_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_teacher_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/tv_student_name"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/img_home"
            app:layout_constraintStart_toEndOf="@+id/img_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/email"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_teacher_name"
            app:layout_constraintStart_toStartOf="@+id/tv_teacher_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_teacher_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/tv_score"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_class"
            app:layout_constraintStart_toStartOf="@+id/tv_class"
            app:layout_constraintTop_toBottomOf="@+id/tv_class" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_home"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_red_home" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_score"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="45sp"
            android:layout_marginTop="4dp"
            android:text="@string/btn_score"
            android:textAllCaps="false"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_class"
            app:layout_constraintStart_toStartOf="@+id/tv_class"
            app:layout_constraintTop_toBottomOf="@+id/tv_score" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>