<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EditProfileActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar_layout" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big_size"
                    android:layout_marginLeft="@dimen/margin_big_size"
                    android:layout_marginTop="@dimen/margin_big_size"
                    android:layout_marginEnd="@dimen/margin_big_size"
                    android:layout_marginRight="@dimen/margin_big_size"
                    android:hint="@string/full_name"
                    app:startIconDrawable="@drawable/ic_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big_size"
                    android:layout_marginLeft="@dimen/margin_big_size"
                    android:layout_marginTop="@dimen/margin_big_size"
                    android:layout_marginEnd="@dimen/margin_big_size"
                    android:layout_marginRight="@dimen/margin_big_size"
                    android:hint="@string/input_email"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_address"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big_size"
                    android:layout_marginLeft="@dimen/margin_big_size"
                    android:layout_marginTop="@dimen/margin_big_size"
                    android:layout_marginEnd="@dimen/margin_big_size"
                    android:layout_marginRight="@dimen/margin_big_size"
                    android:hint="@string/user_address"
                    app:startIconDrawable="@drawable/ic_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_phone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big_size"
                    android:layout_marginLeft="@dimen/margin_big_size"
                    android:layout_marginTop="@dimen/margin_big_size"
                    android:layout_marginEnd="@dimen/margin_big_size"
                    android:layout_marginRight="@dimen/margin_big_size"
                    android:hint="@string/user_phone"
                    app:startIconDrawable="@drawable/ic_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_school"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big_size"
                    android:layout_marginLeft="@dimen/margin_big_size"
                    android:layout_marginTop="@dimen/margin_big_size"
                    android:layout_marginEnd="@dimen/margin_big_size"
                    android:layout_marginRight="@dimen/margin_big_size"
                    android:hint="@string/user_school"
                    app:startIconDrawable="@drawable/ic_school">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_school"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_big_size"
                    android:paddingTop="@dimen/btn_padding_top"
                    android:paddingBottom="@dimen/btn_padding_bottom"
                    android:text="@string/btn_edit"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    app:cornerRadius="@dimen/btn_corner" />

            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>